<resources>
    <string name="app_name">Kasakasa</string>
    <string name="app_package">io.tipblockchain.kasakasa</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="background_content_desc">background</string>
    <string name="welcome_to_tip">Welcome to TIP</string>
    <string name="search_and_discovery">Search and Discovery</string>
    <string name="search">Search</string>
    <string name="p2p_instant_messaging">Encrypted Instant Messaging</string>
    <string name="smart_addresses">Smart Addresses</string>
    <string name="discovery_on_blockchain">Discovery on the blockchain.</string>
    <string name="send_money_to_friends">Send money to friends and family using their username or phone number.</string>
    <string name="information_is_indexed">Information on our network is searchable so users and business can find each other. Discover new ways to interact using blockchain technology.</string>
    <string name="chat_with_friends">Chat securely with your friends and family and transfer cryptocurrency over instant messaging.</string>
    <string name="todo">TODO</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_choose_name">Choose your username</string>
    <string name="title_activity_choose_username">Choose your username</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Enter your password</string>
    <string name="prompt_confirm_password">Confirm your password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_firstname">Firstname</string>
    <string name="prompt_lastname">Lastname</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid.</string>
    <string name="error_invalid_password">This password is too short.</string>
    <string name="error_passwords_dont_match">The passwords do not match.</string>
    <string name="error_incorrect_password">This password is incorrect.</string>
    <string name="error_username_unavailable">This username is not available.</string>
    <string name="error_username_empty">Your usernane can not be empty.</string>
    <string name="error_firstname_empty">Your firstname can not be empty.</string>
    <string name="error_phone_empty">Your phone umber can not be empty.</string>
    <string name="error_invalid_phone">The phone number entered is not valid.</string>
    <string name="error_username_has_space">Your username can not contain spaces.</string>
    <string name="error_username_invalid_length">Your username must be between 2 and 16 characters.</string>
    <string name="error_username_too_short">Username is too short</string>
    <string name="error_username_too_long">Username is too long</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="title_activity_choose_password">Choose your password</string>
    <string name="title_activity_backup_info">BackupInfoActivity</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="title_home">Home</string>
    <string name="empty"></string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_more">More</string>
    <string name="title_my_account">My Account</string>
    <string name="title_activity_backup_wallet">BackupWalletActivity</string>
    <string name="title_activity_backup_finished">BackupFinishedActivity</string>
    <string name="title_activity_backup_account">Back up your account</string>
    <string name="title_button_backup_your_account">Back up your account</string>
    <string name="title_button_backup_account">Back up account</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_send_transfer">Send transfers using a username\n or an address.</string>
    <string name="backup_account">Back up account</string>
    <string name="backup_account_description">You\'ll need to back up your keystore in case you delete this app. Your account keys are never sent to our servers. Thus, this backup is the only way you can restore your account.</string>
    <string name="yes_i_made_backup">Yes, i made a backup</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="try_again">Try again</string>
    <string name="name_placeholder">Jane Smith</string>
    <string name="jane_smith">\@JaneSmith99</string>
    <string name="prefs_setup_complete">SetupComplete</string>
    <string name="default_prefs_file">DefaultPreferences.prefs</string>
    <string name="placeholder_amount">0.00 TIP</string>
    <string name="placeholder_tx_fee">+ 0.000000 ETH</string>
    <string name="amount_and_currency">%s %s</string>
    <string name="plus_amount_and_currency"> +%s %s</string>
    <string name="placeholder_tipamount">5420.75 TIP</string>
    <string name="placeholder_txTime">Mon 11:47 pm</string>
    <string name="title_activity_confirm_payment">Confirm Transfer</string>
    <string name="prompt_send_or_request">Do you want to:</string>
    <string name="request_payment">Request  Payment</string>
    <string name="send_payment">Send Transfer</string>
    <string name="confirm_payment">Confirm Transfer</string>
    <string name="confirm_request">Confirm Request</string>
    <string name="placeholdeTo">To</string>
    <string name="placeholderFrom">From</string>
    <string name="placeholderName2">mike_styles1997</string>
    <string name="requested">Requested</string>
    <string name="total_amount">Total amount</string>
    <string name="prompt_message">Message</string>
    <string name="prompt_amount">Amount</string>
    <string name="prompt_transaction_fee">Transaction Fee</string>
    <string name="prompt_recepient">Recepient</string>
    <string name="title_add_to_contacts">Add to contacts</string>
    <string name="message_added_to_contacts">%s added to your contacts.</string>
    <string name="confirm_add_to_contacts">Do you want to add %s to your contact list?</string>
    <string name="okay">Okay</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="transaction_sent">Transaction Sent</string>
    <string name="buyTip">Buy TIP</string>
    <string name="placeholder_username_jane">jane_smith99</string>
    <string name="title_activity_enter_phone_number">Enter your phone number</string>
    <string name="prompt_select_country">Select your country</string>
    <string name="prompt_enter_phone">Enter your phone number</string>
    <string name="verify_phone">Verify your number</string>
    <string name="prompt_enter_verification">Enter your phone verification code</string>
    <string name="save_password">Save Password</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="title_activity_recovery_phrase">Recovery Phrase</string>
    <string name="title_activity_verify_recovery_phrase">Verify Recovery Phrase</string>
    <string name="verify_recovery_phrase">Verify Recovery Phrase</string>
    <string name="written_recovery_phrase">I have written down my recovery phrase</string>
    <string name="this_is_recover">This is your recovery phrase</string>
    <string name="recovery_warning">Write down your recovery phrase somewhere safe. If you lose this phrase you will lose access to your account.</string>
    <string name="backup_recovery_warning">Backup your recovery phrase somewhere safe. If you lose this phrase you will lose access to your account.</string>
    <string name="placeholder_seed_phrase">one two three four five six seven eight nine ten eleven twelve</string>
    <string name="placeholder_zero_tip_amount">0</string>
    <string name="upgrade">Upgrade</string>
    <string name="upgrade_account">Upgrade Account</string>
    <string name="upgrade_account_message">We\'ve upgraded our network.\nYou have to upgrade your account to use our new features. You will be creating a new wallet.</string>
    <string name="upgrade_account_description">Enter your recovery phrase.\nThis will be used to upgrade your account and generate a new wallets on your device.</string>
    <string name="recovery_phrase_disclaimer">Your recovery phrase is never sent over the network.</string>
    <string name="tip">TIP</string>
    <string name="network_fee_placeholder">Network fee: 0.00014 ETH</string>
    <string name="fast">Fast</string>
    <string name="slow">Slow</string>
    <string name="promptAvailable">Available</string>
    <string name="zero_tip">0.00 TIP</string>
    <string name="prefs_backup_seed_title">Backup recovery phrase.</string>
    <string name="prefs_password_for_transfer_title">Require password for transfers</string>
    <string name="prefs_password_for_transfer_summary">You will have to enter your password each time to send a transfer.</string>
    <string name="prefs_password_for_seed_title">Require password to show recovery</string>
    <string name="prefs_password_for_seed_summary">You will have to enter your password to display or backup your recovery phrase.</string>
    <string name="prefs_category_account">My Account</string>
</resources>