<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:visibility="visible">

    <android.support.v7.preference.PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/prefs_category_account">
        <android.support.v7.preference.SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="pref_password_for_transfer"
            android:title="@string/prefs_password_for_transfer_title"
            android:summary="@string/prefs_password_for_transfer_summary"/>
        <android.support.v7.preference.SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="pref_password_for_seed"
            android:title="@string/prefs_password_for_seed_title"
            android:summary="@string/prefs_password_for_seed_summary"/>
        <android.support.v7.preference.Preference
            app:iconSpaceReserved="false"
            android:title="@string/prefs_backup_seed_title">
            <intent
                android:action="io.tipblockchain.kasakasa.ui.backup.BackupAccountActivity" />
        </android.support.v7.preference.Preference>
    </android.support.v7.preference.PreferenceCategory>
    <PreferenceCategory android:title=" "
        android:layout="@layout/row_preference_footer">

    </PreferenceCategory>

</PreferenceScreen>